# SamplePackAgent

./: .gitignore  README.md  codebase.txt  gitingest.py  pyproject.toml  requirements.txt  tree.txt
configs/: sfx_agent.yml
docs/: architecture.md
scripts/: run_agent.py
sfx_agent/: composer.py  config.py  decomposer.py  feedback.py  generator.py  input_handler.py  library.py  post_processor.py  runner.py
tests/: test_composer.py  test_config.py  test_decomposer.py  test_feedback.py  test_generator.py  test_input_handler.py  test_library.py  test_post_processor.py  test_runner.py
